--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
 <h1>
-  {{title}}
+  {{title | lengthLimit : 5 }}
 </h1>
+
+<ul>
+
+  <li *ngFor="let item of arr1 | arrayLimit ">
+  {{item}}</li>
+
+</ul>
