Changes in app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,11 @@
-<h1>
+ String Custom Pipe Works here
+<h3>
    <!-- String Custom Pipe is Used here  -->
       {{title | lengthLimit : 3 }}
-</h1>
+</h3>
 
+
+  Array Custom Pipe Works here
 <ul>
   <!-- Array Custom Pipe is used here -->
   <li *ngFor="let item of arr1 | arrayLimit ">
